objects/csconta__Billing_Account__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Billing_Channel__c</fullName>
        <label>Billing Channel</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Bill</fullName>
                </value>
                <value>
                    <fullName>eMail Bill</fullName>
                </value>
                <value>
                    <fullName>eBanking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Billing_Email__c</fullName>
        <description>Created by Nexell. The invoice can be delivered the email registered in this field.</description>
        <label>Billing email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Local_Branch__c</fullName>
        <defaultValue>&quot;ZH_KMU&quot;</defaultValue>
        <label>Local Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZH_KMU</fullName>
                </value>
                <value>
                    <fullName>ZH_Business_Admin</fullName>
                </value>
                <value>
                    <fullName>ZH_Sales_Admin</fullName>
                </value>
                <value>
                    <fullName>ROM_Solution</fullName>
                </value>
                <value>
                    <fullName>ROM_Small</fullName>
                </value>
                <value>
                    <fullName>ZH_SOHO</fullName>
                </value>
                <value>
                    <fullName>ZH_8021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ECD_Address_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ECD_Business_Numbers__c</fullName>
        <label>ECD Business Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEB_DEFAULT</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ECD_Cut_A_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cut A number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ECD_Cut_B_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cut B number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ECD_VAT_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_ECD_Voice__c</fullName>
        <label>ECD Voice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voice-Default</fullName>
                </value>
                <value>
                    <fullName>Voice-Default with discounts</fullName>
                </value>
                <value>
                    <fullName>Voice-Default incl. total</fullName>
                </value>
                <value>
                    <fullName>Voice-SA</fullName>
                </value>
                <value>
                    <fullName>Voice-CHUV</fullName>
                </value>
                <value>
                    <fullName>CEV_COST_OBJECT</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_ECD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Call Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Invoice_Condition_Max_Bill_Period__c</fullName>
        <label>Max. Bill Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Invoice_Condition_Min_Amount__c</fullName>
        <label>Min. Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_Invoice_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Last_Taifun_Reconciliation__c</fullName>
        <label>Last Taifun Reconciliation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Synced_Taifun_Bill_Spec__c</fullName>
        <label>Taifun Bill_Spec Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csconta__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Channel__c</fullName>
        <label>Billing Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper bill</fullName>
                </value>
                <value>
                    <fullName>Electronic Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Billing_City__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c ,   csconta__Address__r.cscrm__City__c , csconta__Account__r.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Country__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Country__c  ,csconta__Account__r.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Cycle__c</fullName>
        <formula>Text(csconta__Account__r.csconta__Billing_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Language__c</fullName>
        <label>Billing Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Billing_Postcode__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Zip_Postal_Code__c,  csconta__Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Street__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Street__c,  csconta__Account__r.BillingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Financial_Account_Number__c</fullName>
        <label>Financial Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Format_Type__c</fullName>
        <label>Format Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Cost centre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unused</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Override_Account_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Account Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csconta__Parent_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly invoice</fullName>
                </value>
                <value>
                    <fullName>Quarterly invoice</fullName>
                </value>
                <value>
                    <fullName>Half-yearly invoice</fullName>
                </value>
                <value>
                    <fullName>Yearly invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not used</description>
        <inlineHelpText>This field is not used</inlineHelpText>
        <label>Unused</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Unused</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not in collection</fullName>
                    <default>true</default>
                    <label>Not in collection</label>
                </value>
                <value>
                    <fullName>In collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not used</description>
        <inlineHelpText>This field is not used</inlineHelpText>
        <label>Unused</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Unused</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BA-{0000000}</displayFormat>
        <label>Billing Account Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NX_Address_Mandatory_when_Channel_Paper</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

INCLUDES( UPC_Billing_Channel__c ,&quot;Paper Bill&quot;),
ISBLANK(  UPC_Shipping_Address__c  ))</errorConditionFormula>
        <errorDisplayField>UPC_Shipping_Address__c</errorDisplayField>
        <errorMessage>When the Channel is Paper, the Shipping Address field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NX_Email_Mandatory_when_Channel_is_email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
INCLUDES( UPC_Billing_Channel__c ,&quot;eMail Bill&quot;),
 ISBLANK( UPC_Billing_Email__c ))</errorConditionFormula>
        <errorDisplayField>UPC_Billing_Email__c</errorDisplayField>
        <errorMessage>When the Channel is email, the Billing email field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>csconta__Override_Account_Billing_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(csconta__Override_Account_Address__c),  NOT(ISBLANK(csconta__Address__c)))</errorConditionFormula>
        <errorDisplayField>csconta__Address__c</errorDisplayField>
        <errorMessage>The address lookup must be cleared if &quot;Override Account Address&quot; is unchecked</errorMessage>
    </validationRules>
</CustomObject>